--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "commander": "^12.0.0",
+    "inquirer": "^9.2.16",
     "mongoose": "^8.2.2"
   }
 }
